# libsmb2

./: CMakeLists.txt
.github/workflows/: ci.yml  transport-mock.yml
docs/: transport-abstraction-plan.md  transport-external-api.md  transport-internals.md
include/: libsmb2-private.h
include/smb2/: libsmb2.h
lib/: CMakeLists.txt  Makefile.am  init.c  libsmb2.c  libsmb2.syms  smb2-transport.h  socket.c  sync.c  timer.c  transport-external.c
tests/: CMakeLists.txt  Makefile.am  external_tcp_transport.c  external_tcp_transport.h  mock_transport.c  mock_transport.h  prog_external_exchange.c  prog_ls_external.c  prog_mock.c  recorded_exchange.h  test_0500_ls_external_tcp.sh  test_0600_mock_inmemory.sh  test_external_transport.sh
